# snippets

./: CMakeLists.txt
src/: fibonacci.cpp  hello_world.cpp  pyramidal.cpp
